--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,7 @@ block content
             });
         //socket listener
         script.
-            var socket = io.connect('https://simple-chatroom-1.herokuapp.com:80/socket.io/?EIO=4&transport=websocket/')
+            var socket = io.connect('https://simple-chatroom-1.herokuapp.com/')
             console.log("connesso");
             socket.on('add', function (data) {
                 console.log("append: "+data.msg);
