--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,6 @@ block content
                 .col-xs-4
                 .col-xs-4
                     ul.list-group.pre-scrollable(id="list-box")
-                            li.list-group-item txt1
                 .col-xs-4
 
             .row
@@ -38,7 +37,9 @@ block content
             socket.on('add', function (data) {
                 console.log("append: "+data.msg);
                 append_new_message(data.msg);
+                scroll_bottom();
             })
+
 
 
 
