--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title chatroom
+    title Chatroom
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -13,9 +13,9 @@ html
     script(src='https://unpkg.com/axios/dist/axios.min.js')
     script(src='/socket.io/socket.io.js')
 
-
-    //association function/element html
     script(type='text/javascript', src='/javascripts/relation.js')
 
+
   body
+
     block content
